# faiss_test

./: .gitignore~  CMakeLists.txt  README  README.md
feat/: BaseLabel.txt  QueryLabel.txt
featCaffe/: 5k.txt  queryLabel.txt
include/: hz_object.h  hz_objectRetrival.h  hz_objectTypedef.h
src/: 2-IVFFlat.cpp  3-IVFPQ.cpp  4-GPU.cpp  5-Multiple-GPUs.cpp  hz_featCompare.cpp
